--- a/webdesign/test_keywords/keywords.css
+++ b/webdesign/test_keywords/keywords.css
@@ -1,11 +1,40 @@
+body {
+	font-family: Georgia;
+	background-color: white; /*#EBE7E6*/
+}
+
+.in-text {
+	background-color: blue;
+}
+
+/*.tip {
+	/*display: none;
+	width: 50px;
+	height: 20px;
+}
+
+*/
 .keyword {
-	font-weight: bold !important;
+	color: #454545;
+    /*text-shadow: 1px 1px #292929;
+   /*-webkit-text-fill-color: #FF9980;  /*Will override color (regardless of order) */
+   /*-webkit-text-stroke-width: .3px;
+   -webkit-text-stroke-color: #1F1F1F;	/*font-weight: bold !important;
 	font-family: "Baskerville";
 	border-radius: 20%;
     background-color: #DEDEDE;
     box-shadow:
-        0 0 80px 6px #BEBEBE, 
-        0 0 60px 9px #DEDEDE;
+        0px 0px 60px 0px #BEBEBE, 
+        0 0 0px 0px #DEDEDE;*/
+
+	background: 
+	-webkit-linear-gradient(#FF9980, #292929);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 
-/*0 0 60px 30px #fff,  /* inner white */
+/*ff3300 */
+
+/*.keyword:hover {
+    text-shadow: 0px 0px 10px #ff3300;
+}*/
