--- a/webdesign/test_keywords/keywords.css
+++ b/webdesign/test_keywords/keywords.css
@@ -1,10 +1,54 @@
-body {
+body, button, ins {
 	font-family: Georgia;
-	background-color: white; /*#EBE7E6*/
+	font-size: 1em;
+	/*background-color: white;*/ /*#EBE7E6*/
 }
 
+
+#a a{
+  text-decoration: none;
+  border: none;
+  color: red;
+ 
+}
+#a a:hover{
+  color: green;
+  background-color: transparent;
+}
+
+
+#myPopup p{
+   color: blue;
+  -webkit-user-select: all  !important;  /* Chrome all / Safari all */
+  -moz-user-select: all !important;     /* Firefox all */
+  -ms-user-select: all !important;      /* IE 10+ */
+  user-select: all !important;
+}
+
+
+ins {
+	text-decoration: none;
+}
+
+/*button {
+    align-items: flex-start;
+    text-align: center;
+    cursor: default;
+    color: black;
+    padding: 0px 0px 0px;
+    border: 0px;
+    border-image-source: none;
+    border-image-slice: none;
+    border-image-width: none;
+    border-image-outset: none;
+    border-image-repeat: none;
+    background-color: white;
+    box-sizing: none;
+}*/
+
+
 .in-text {
-	background-color: blue;
+	background-color: orange;
 }
 
 /*.tip {
